--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fe-chatbot",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.13.2",
     "babel-preset-expo": "~54.0.0",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.26",
     "expo-router": "~6.0.16",
     "expo-status-bar": "~3.0.8",
