--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_BASE_URL=http://127.0.0.1:8000/api/
+API_BASE_URL=http://ml.jawabarat.info:8000/api/
 API_BASE_LOGIN=https://sikonda.jawabarat.info/dbms/
