--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "FE-ChatBot",
-    "slug": "FE-ChatBot",
+    "name": "BOT-SIKONDA",
+    "slug": "bot-sikonda",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
